methods.picture.PictureMono3.scala.error
Compilation error:
PictureMono3:28: error: not found: value makeligne
  makeligne();
  ^